--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lasagna</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>Lasagna</h1>
-    <img src="../images/recipes/lasagna.jpg" alt="A lasagna dish" height="300" width="300">
+    <img src="../images/recipes/lasagna.jpg" alt="A lasagna dish">
     
     <h2>Description</h2>
     
